--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -130,7 +130,7 @@ body {
       .section-inner {
         background: none !important;
 
-        .search {
+        .search-content {
           position: relative;
           text-align: center;
 
