--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -17,7 +17,7 @@
       %section#search-form.section-search
         .shell
           .section-inner
-            .search
+            .search-content
               .search-label
                 Search for sport and find preventive measures
               .search-box
