Change to asset path

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,7 +13,7 @@
           .shell
             .header-inner
               %a.logo{ href: '/' }
-                =image_tag asset_url('main_logo')
+                =image_tag asset_path('main_logo')
               %p.help Play safe. Play smart.
               %button.btn-nav
                 %span.bar
