Add search function to the homepage

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -21,17 +21,7 @@
               .search-label
                 Search for sport and find preventive measures
               .search-box
-                .ui.category.search.focus
+                .ui.category.search.focus.sportaide_search.fluid
                   .ui.icon.input.fluid
                     %input.prompt{:autocomplete => "off", :placeholder => "Search for sport...", :type => "text"}/
                     %i.search.icon
-                  .results.transition.hidden
-                    %a.result
-                      .content
-                        .title shadow
-                    %a.result
-                      .content
-                        .title superman
-                    %a.result
-                      .content
-                        .title soccer
