--- a/app/assets/stylesheets/courses.scss
+++ b/app/assets/stylesheets/courses.scss
@@ -101,7 +101,7 @@
 
 .course-title-banner {
   width: 100%;
-  background-color: #333;
+  background-color: #152B39;
   color: #fff;
   box-shadow: 0 0 5px rgba(0,0,0,.1);
   padding: 10px 0;
