--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -47,7 +47,7 @@ body {
 
       .help {
         float: left;
-        margin: 7px 0 0 200px;
+        margin: 7px 0 0 0;
         font-size: 16px;
         color: #392415;
         letter-spacing: 0.02em;
