--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,25 +1,23 @@
 .intro.intro-home
   .intro-bg
   .intro-body
-    .shell
-      %h1 A better way to prevent an injury
+    .ui.container
+      %h1 A better way to teach kid about sport integrity
       %ol
         %li
-          Up to 50% of sport injuries are preventable
+          Teach your kids how to play their sport correctly
         %li
-          One million sport injuries occur each year in Australia
+          Become their sport partners
         %li
-          Half of teenagers who are hospitalized, were injured while
-          %br
-          being engaged in sport activities
+          Being engaged in their activities
   .intro-actions
-    .shell
+    .ui.container
       %section#search-form.section-search
         .shell
           .section-inner
             .search-content
               .search-label
-                Search for sport and find preventive measures
+                Search for sport and find your course
               .search-box
                 .ui.category.search.focus.sportaide_search.fluid
                   .ui.icon.input.fluid
