--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -28,6 +28,35 @@
   }
 
   .general-search-bar {
-    padding-top: 19px!important;
+    padding-top: 5px!important;
   }
+}
+
+@media (min-width:320px)  {
+  /* smartphones, portrait iPhone, portrait 480x320 phones (Android) */
+  .footer {
+    .menu-section button {
+      font-size: 15px;
+    }
+  }
+}
+@media (min-width:480px)  {
+  /* smartphones, Android phones, landscape iPhone */
+  .footer {
+    .menu-section button {
+      font-size: 15px;
+    }
+  }
+}
+@media (min-width:600px)  {
+  /* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */
+}
+@media (min-width:801px)  {
+  /* tablet, landscape iPad, lo-res laptops ands desktops */
+}
+@media (min-width:1025px) {
+  /* big landscape tablets, laptops, and desktops */
+}
+@media (min-width:1281px) {
+  /* hi-res laptops and desktops */
 }
