--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -295,3 +295,12 @@ img {
     }
   }
 }
+
+.no-padding {
+  padding: 0!important;
+}
+
+.no-margin-left-right{
+  margin-left: 0!important;
+  margin-right: 0!important;
+}
