--- a/app/assets/stylesheets/map_marker.scss
+++ b/app/assets/stylesheets/map_marker.scss
@@ -45,11 +45,11 @@
   &.hint--balloon{
 //    @include ice-hint-type(rgba(97, 104, 172, 1));
     .hint__content {
-      z-index: 100 - 20;
+      z-index: 200;
       transition: background-color 1.0s ease;
     }
     &:before {
-      z-index: 100 - 19;
+      z-index: 201;
       transition: border-color 1.0s ease;
     }
   }
@@ -57,6 +57,7 @@
   .map-marker-hint {
     cursor: default;
     box-shadow: 2px 2px 12px rgba(0,0,0,0.5);
+    visibility: hidden;
   }
 
   .map-marker-hint__close-button {
