--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -20,6 +20,10 @@
                 .column.computer.tablet.only
                   %p.help Play safe. Play smart.
                 .column.computer.tablet.only
+                  %a{ class: 'ui primary button dashboard-btn', href: '/dashboard/lessons'} Courses
+                .column.computer.tablet.only
+                  %a{ class: 'ui primary button dashboard-btn', href: '/dashboard/clubs/club_map'} Club Map
+                .column.computer.tablet.only
                   %a{ class: 'ui primary button dashboard-btn', href: '/dashboard/lessons'} Dashboard
                 -#%ul
                 -#  %li.has-subnav
