--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -10,7 +10,7 @@
   background-color: #152B39;
   color: #fff;
 
-  .menu-section button {
+  .menu-section .button {
     color: white;
     border-color: white;
     background-color: transparent;
