--- a/app/assets/stylesheets/club_map.scss
+++ b/app/assets/stylesheets/club_map.scss
@@ -109,11 +109,27 @@ $cubic: cubic-bezier(.64,.09,.08,1);
   padding: 7px 0;
   border-bottom: 1px solid #ccc;
   font: 15px/24px "Lato", Arial, sans-serif;
-  color: #333;
+  color: white;
+  text-shadow: 2px 4px 3px rgba(0,0,0,0.3);
   width: 100%;
   box-sizing: border-box;
   letter-spacing: 1px;
   background: transparent;
+
+  &::-webkit-input-placeholder { /* Chrome */
+    color: white;
+  }
+  &:-ms-input-placeholder { /* IE 10+ */
+    color: white;
+  }
+  &::-moz-placeholder { /* Firefox 19+ */
+    color: white;
+    opacity: 1;
+  }
+  &:-moz-placeholder { /* Firefox 4 - 18 */
+    color: white;
+    opacity: 1;
+  }
 }
 
 .club-list {
