--- a/app/assets/stylesheets/club_map.scss
+++ b/app/assets/stylesheets/club_map.scss
@@ -53,7 +53,7 @@ $cubic: cubic-bezier(.64,.09,.08,1);
     border-radius: 2px;
     transition: opacity 0.2s $cubic, transform 0.2s $cubic;
   }
-  &:hover {
+  &:hover, &.selected {
     &:after {
       display: block;
       opacity: 1;
@@ -78,7 +78,7 @@ $cubic: cubic-bezier(.64,.09,.08,1);
     transition: opacity 0.2s $cubic, transform 0.2s $cubic;
     z-index: 3;
   }
-  &:hover {
+  &:hover, &.selected {
     &:before {
       display: block;
       opacity: 1;
