--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -18,7 +18,8 @@
                     =image_tag('main_logo.png')
                     %a{ class: 'ui primary button dashboard-btn mobile only', href: '/dashboard/lessons'} Dashboard
                 .column.computer.tablet.only
-                  %p.help Play safe. Play smart.
+                  %a{href: '/dashboard/lessons', class: 'menu-item'} Courses
+                  %a{href: '/dashboard/clubs/club_map', class: 'menu-item'} Club Map
                 .column.computer.only
                   %a{ class: 'ui primary button dashboard-btn', href: '/dashboard/lessons'} Dashboard
                   =link_to "Admin Login", new_user_session_path, class: 'ui primary button dashboard-btn'
