--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -331,6 +331,7 @@ img {
 .available-features {
   padding-bottom: 50px;
   margin-top: 25px;
+  background: white;
   .feature {
     text-align: center;
     transition: all .2s ease-in-out;
