Various fixes throughout the site

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -399,3 +399,11 @@ img {
     zoom: 0.45;
   }
 }
+
+.news-heading {
+  font-weight: lighter;
+  font-size: 34px;
+  border-bottom: 1px solid black;
+  margin-bottom: 16px;
+  width: 153px;
+}
