--- a/app/assets/stylesheets/courses.scss
+++ b/app/assets/stylesheets/courses.scss
@@ -195,7 +195,8 @@
 
     h6 {
       color: #888;
-      margin-bottom: 4px;
+      margin: 0 0 4px 0;
+      padding: 0;
       font-weight: 400;
       font-size: 13px;
       text-align: center;
