--- a/app/assets/stylesheets/custom_home.scss
+++ b/app/assets/stylesheets/custom_home.scss
@@ -109,12 +109,20 @@
     vertical-align: top;
 }
 .news-thumbnail .news-article-content{
-    width:152px;
     margin-left:3px;
 }
 .news-thumbnail .news-article-content h3{
     margin-bottom: 10px;
     font-size: 16px;
+    a {
+      font-size: 15px;
+      display: block;
+      color: black;
+
+      &:hover {
+        color: inherit;
+      }
+    }
 }
 .news-thumbnail .news-article-content p{}
 
